Fixed overlap at 1025width and above

--- a/css/style.less
+++ b/css/style.less
@@ -752,7 +752,7 @@ The following CSS affects all screen sizes larger than 1024 pixels wide.
             }
             div.detailscard {
                 width: 30%;
-                top: 315px;
+                top: 380px;
                 left: 15px;
             }
         }
@@ -957,7 +957,7 @@ The following CSS affects all screen sizes larger than 1024 pixels wide.
             margin-bottom: 20em;
             img {
                 right: -330px;
-                top: -190px;
+                top: -120px;
                 scale: .43;
             }
             div {
@@ -974,7 +974,7 @@ The following CSS affects all screen sizes larger than 1024 pixels wide.
             div.detailscard {
                 width: 17%;
                 left: 200px;
-                top: 325px;
+                top: 450px;
                 padding: 1.75em 2.5em;
             }
         }
